<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.ForgotPassword_Fragment">

    <EditText
        android:id="@+id/forgotUserName"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_30sdp"
        style="@style/editStyle"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/userName"
        android:paddingLeft="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_rounded" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/forgotCountryCode"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/edittext_rounded"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingLeft="@dimen/_5sdp"
        app:ccp_textSize="@dimen/_12sdp"
        app:ccp_defaultNameCode="IN"
        app:ccp_contentColor="@color/colorPrimary"
        app:ccp_autoDetectCountry="true"
        android:layout_alignStart="@+id/forgotUserName"
        android:layout_below="@+id/forgotUserName">

    </com.hbb20.CountryCodePicker>

    <EditText
        android:id="@+id/forgotMobile"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        style="@style/editStyle"
        android:layout_below="@+id/forgotUserName"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/Mobile_No"
        android:inputType="phone"
        android:maxLength="11"
        android:layout_toRightOf="@+id/forgotCountryCode"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_alignEnd="@+id/forgotUserName"
        android:background="@drawable/edittext_rounded" />

    <Button
        android:id="@+id/btnFragGetOtp"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/Get_otp"
        android:textSize="@dimen/_12sdp"
        android:layout_below="@id/forgotCountryCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_25sdp"
        style="@style/textViewStyle"
        android:background="@drawable/button_rounded_filled"
        android:layout_marginBottom="@dimen/_12sdp"/>

</RelativeLayout>