<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    tools:context=".Fragment.DeleteUser">
    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relatLayout238"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_25sdp"
        card_view:cardCornerRadius="@dimen/_10sdp"
        card_view:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/deleteUserProfilePic"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                card_view:civ_border_width="@dimen/_2sdp"
                card_view:civ_border_color="@color/bg_main"
                android:src="@drawable/default_user"/>

            <Spinner
                android:id="@+id/deleteUserNameSpinner"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/deleteUserProfilePic"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:background="@drawable/spinner_rounded"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/deleteUserName"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_below="@+id/deleteUserNameSpinner"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/userName"
                android:enabled="false"
                android:paddingLeft="@dimen/_17sdp"
                android:paddingRight="@dimen/_15sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/deleteUserMobile"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_below="@+id/deleteUserName"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/Mobile_No"
                android:inputType="phone"
                android:enabled="false"
                android:paddingLeft="@dimen/_17sdp"
                android:paddingRight="@dimen/_1sdp"
                android:layout_alignEnd="@+id/deleteUserName"
                android:background="@drawable/edittext_rounded"  />

            <EditText
                android:id="@+id/deleteUserGeofence"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_below="@+id/deleteUserMobile"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/Geofence_Name"
                android:enabled="false"
                android:paddingLeft="@dimen/_17sdp"
                android:paddingRight="@dimen/_15sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_centerHorizontal="true" />


            <EditText
                android:id="@+id/deleteUserAdmin"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_below="@+id/deleteUserGeofence"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="Admin Name"
                android:enabled="false"
                android:paddingLeft="@dimen/_17sdp"
                android:paddingRight="@dimen/_15sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_centerHorizontal="true" />


            <Button
                android:id="@+id/btnCurrentDeleteUser"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="Delete User"
                android:textSize="@dimen/_12sdp"
                android:layout_below="@id/deleteUserAdmin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                style="@style/textViewStyle"
                android:background="@drawable/button_rounded_filled"
                android:layout_marginBottom="@dimen/_12sdp"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>