<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".Fragment.AddNewUser">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/relatLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_25sdp"
        card_view:cardCornerRadius="@dimen/_10sdp"
        card_view:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfilePic"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                card_view:civ_border_width="@dimen/_2sdp"
                card_view:civ_border_color="@color/bg_main"
                android:src="@drawable/default_user"/>

            <EditText
                android:id="@+id/newUserName"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/userName"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:layout_below="@+id/userProfilePic"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edittext_rounded" />
            <EditText
                android:id="@+id/newUserPassword"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_below="@+id/newUserName"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/Password"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_centerHorizontal="true" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/newUserCountryCode"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/edittext_rounded"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingLeft="@dimen/_5sdp"
                app:ccp_textSize="@dimen/_10sdp"
                app:ccp_defaultNameCode="IN"
                app:ccp_contentColor="@color/bg_main"
                app:ccp_autoDetectCountry="true"
                android:layout_alignStart="@+id/newUserPassword"
                android:layout_below="@+id/newUserPassword">

            </com.hbb20.CountryCodePicker>

            <EditText
                android:id="@+id/newUserMobile"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                style="@style/textViewStyleDark"
                android:layout_below="@+id/newUserPassword"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/Mobile_No"
                android:inputType="phone"
                android:maxLength="11"
                android:layout_toRightOf="@+id/newUserCountryCode"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:layout_alignEnd="@+id/newUserPassword"
                android:background="@drawable/edittext_rounded"  />

            <Spinner
                android:id="@+id/newUserGeozoneSpinner"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/newUserMobile"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:background="@drawable/spinner_rounded"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:id="@+id/newUserAdminSpinner"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/newUserGeozoneSpinner"
                android:layout_marginTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingTop="@dimen/_3sdp"
                android:background="@drawable/spinner_rounded"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnAddNewUser"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="Add User"
                android:textSize="@dimen/_12sdp"
                android:layout_below="@id/newUserAdminSpinner"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                style="@style/textViewStyle"
                android:background="@drawable/button_rounded_filled"
                android:layout_marginBottom="@dimen/_12sdp"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>